kubernetes/apps/media/radarr/app/httproute.yaml
# Internal access to Radarr web UI
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  hostnames:
    - "radarr.${SECRET_DOMAIN}"
  parentRefs:
    - kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: radarr
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
